# proj-sys-bug

./: Cargo.toml
proj-sys/: build.rs
proj-sys/src/: bindings_docs-rs.rs
