[package]
name = "proj-sys-bug"
version = "0.1.0"
authors = ["Corey Farwell <coreyf@rwell.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proj-sys = { path = "proj-sys" , features = ["nobuild"]}


[workspace]
members = [
        "proj-sys"
]